// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signup Main Form Component should render correctly 1`] = `
<DocumentFragment>
  <div
    class="LargeLogo__LogoWrapper-sc-1bu4w53-0 hBpxrf"
  >
    <a
      href="/"
    />
  </div>
  <div>
    <form
      class="SignupMainForm__SignupForm-sc-18p437d-0 dqTyyP"
      method="post"
    >
      <div>
        <span>
          Sign up to see photos and videos from your friends.
        </span>
      </div>
      <div
        style="margin-top: -5px;"
      >
        <div>
          <button
            class="LoginWithFB__LoginWithFBButton-sc-18oes83-0 eSywRS"
          >
            <span />
            Login in with Facebook
          </button>
          <div>
            <div>
              <div />
              <div>
                OR
              </div>
              <div />
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
      >
        <label
          class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
        >
          <input
            class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
            maxlength="255"
            name="emailOrPhone"
            placeholder="Phone Number or Email"
            value=""
          />
        </label>
      </div>
      <div
        class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
      >
        <label
          class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
        >
          <input
            class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
            maxlength="255"
            name="fullName"
            placeholder="Full Name"
            value=""
          />
        </label>
      </div>
      <div
        class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
      >
        <label
          class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
        >
          <input
            class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
            maxlength="255"
            name="userName"
            placeholder="Username"
            value=""
          />
        </label>
      </div>
      <div
        class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
      >
        <label
          class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
        >
          <input
            class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
            maxlength="255"
            name="password"
            placeholder="Password"
            type="password"
            value=""
          />
        </label>
      </div>
      <div>
        By signing up, you agree to our Terms, Privacy Policy and Cookies Policy.
      </div>
      <button
        class="StyledButton__StyledButtonComponent-sc-8t4kac-0 fLkIsR"
        data-testid="submit-signupmain"
        disabled=""
        type="button"
      >
        Sign Up
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Signup Main Form Component should validate all params and render correctly 1`] = `
<DocumentFragment>
  <div
    class="LargeLogo__LogoWrapper-sc-1bu4w53-0 hBpxrf"
  >
    <a
      href="/"
    />
  </div>
  <div>
    <form
      class="SignupMainForm__SignupForm-sc-18p437d-0 dqTyyP"
      method="post"
    >
      <div>
        <span>
          Sign up to see photos and videos from your friends.
        </span>
      </div>
      <div
        style="margin-top: -5px;"
      >
        <div>
          <button
            class="LoginWithFB__LoginWithFBButton-sc-18oes83-0 eSywRS"
          >
            <span />
            Login in with Facebook
          </button>
          <div>
            <div>
              <div />
              <div>
                OR
              </div>
              <div />
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
      >
        <label
          class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
        >
          <input
            class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
            maxlength="255"
            name="emailOrPhone"
            placeholder="Phone Number or Email"
            value="a@a.com"
          />
        </label>
      </div>
      <div
        class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
      >
        <label
          class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
        >
          <input
            class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
            maxlength="255"
            name="fullName"
            placeholder="Full Name"
            value="full name"
          />
        </label>
      </div>
      <div
        class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
      >
        <label
          class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
        >
          <input
            class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
            maxlength="255"
            name="userName"
            placeholder="Username"
            value="username"
          />
        </label>
      </div>
      <div
        class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
      >
        <label
          class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
        >
          <input
            class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
            maxlength="255"
            name="password"
            placeholder="Password"
            type="password"
            value="Pa$$w0rd!"
          />
        </label>
      </div>
      <div>
        By signing up, you agree to our Terms, Privacy Policy and Cookies Policy.
      </div>
      <button
        class="StyledButton__StyledButtonComponent-sc-8t4kac-0 jZJObc"
        data-testid="submit-signupmain"
        type="button"
      >
        Sign Up
      </button>
    </form>
  </div>
</DocumentFragment>
`;
